# netbox-name-generator

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  ssh_carstenviell  ssh_carstenviell.pub
netbox_name_generator/: __init__.py  forms.py  model_forms.py  models.py  name_logic.py  navigation.py  tables.py  template_content.py  urls.py  views.py
netbox_name_generator/api/: serializers.py  urls.py  views.py
netbox_name_generator/locale/de/LC_MESSAGES/: django.po
netbox_name_generator/migrations/: 0001_initial.py  0002_initial_data.py
netbox_name_generator/templates/netbox_name_generator/: name_generator.html
