[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-name-generator"
version = "1.2.1"
description = "NetBox plugin that automatically generates device names based on configurable parameters"
authors = [{ name = "Carsten Viell" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/carstenviell/netbox-name-generator"
Repository = "https://github.com/carstenviell/netbox-name-generator"

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_name_generator*"]

[tool.setuptools.package-data]
"netbox_name_generator" = ["templates/**/*"]

[tool.setuptools]
include-package-data = true
